--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,14 +4,19 @@ galaxy_info:
   description: Ansible role to set up percona-server server in Debian-like systems
   company: vmandco.com
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 1.6
   platforms:
     - name: Ubuntu
       versions:
-        - all
+        - precise
+        - trusty
+        - vivid
+        - wily
     - name: Debian
       versions:
-        - all
+        - squeeze
+        - wheezy
+        - jessie
   categories:
     - database
     - database:sql
