--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: Ansible role to set up percona-server server in Debian-like systems
   company: vmandco.com
   license: MIT
-  min_ansible_version: 1.8
+  min_ansible_version: 2.2.1
   platforms:
     - name: Ubuntu
       versions:
@@ -12,6 +12,7 @@ galaxy_info:
         - trusty
         - vivid
         - wily
+        - xenial
     - name: Debian
       versions:
         - squeeze
