--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
 
   # Remove mysql-*
   - sudo apt-get remove --purge 'mysql-*'
+  - sudo apt-get autoremove
+  - sudo apt-get autoclean
 
   # Delete old data to prevent upgrade issues
   - sudo rm -rf /var/lib/mysql
