--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ python: "2.7"
 
 env:
   - ANSIBLE_VERSION=latest
-  - ANSIBLE_VERSION=1.9.0.1
-  - ANSIBLE_VERSION=1.8
+  - ANSIBLE_VERSION=2.2.1
 
 branches:
   only:
@@ -16,12 +15,20 @@ before_install:
 
   # Remove mysql-*
   - sudo apt-get remove --purge 'mysql-*'
+  - sudo apt-get autoremove
+  - sudo apt-get autoclean
+
+  # Delete old data to prevent upgrade issues
+  - sudo rm -rf /var/lib/mysql
+  - sudo rm -rf /var/log/mysql
 
 install:
   # Install Ansible.
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
 
 script:
+  - ansible --version
+
   # Check the role/playbook's syntax.
   - ansible-playbook -i localhost, --connection=local tests/play.yml --syntax-check
 
