--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ script:
   - ansible-playbook -i localhost, --connection=local tests/play.yml --syntax-check
 
   # Run the role/playbook with ansible-playbook.
-  - ansible-playbook -i localhost, --connection=local --sudo tests/play.yml -vvvv
+  - ansible-playbook -i localhost, --connection=local --become tests/play.yml -vvvv
 
   # Run the role/playbook again, checking to make sure it's idempotent.
   - >
-    ansible-playbook -i localhost, --connection=local --sudo tests/play.yml 
+    ansible-playbook -i localhost, --connection=local --become tests/play.yml 
     | grep -q 'changed=0.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
